k8s/gilbadak-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gilbadak-user
spec:
  selector:
    app: gilbadak-user
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30080
  type: NodePort

---
apiVersion: v1
kind: Service
metadata:
  name: gilbadak-busking
spec:
  selector:
    app: gilbadak-busking
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30080
  type: NodePort
