k8s/gilbadak-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gilbadak-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/v1/users
            pathType: Prefix
            backend:
              service:
                name: gilbadak-user
                port:
                  number: 80
          - path: /api/v1/buskings
            pathType: Prefix
            backend:
              service:
                name: gilbadak-busking
                port:
                  number: 80
