k8s/gilbadak-k8s.yaml
---
# gilbadak-user
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gilbadak-user
  labels:
    app: gilbadak-user
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gilbadak-user
  template:
    metadata:
      name: gilbadak-user
      labels:
        app: gilbadak-user
    spec:
      containers:
        - name: gilbadak-user
          image: ghosttrio/gilbadak-user:latest
          ports:
            - containerPort: 80
          imagePullPolicy: Always
      restartPolicy: Always
---
# gilbadak-busking
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gilbadak-busking
  labels:
    app: gilbadak-busking
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gilbadak-busking
  template:
    metadata:
      name: gilbadak-busking
      labels:
        app: gilbadak-busking
    spec:
      containers:
        - name: gilbadak-busking
          image: ghosttrio/gilbadak-busking:latest
          ports:
            - containerPort: 80
          imagePullPolicy: Always
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: gilbadak-user
spec:
  selector:
    app: gilbadak-user
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort

---
apiVersion: v1
kind: Service
metadata:
  name: gilbadak-busking
spec:
  selector:
    app: gilbadak-busking
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30080
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gilbadak-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/v1/users
            pathType: Prefix
            backend:
              service:
                name: gilbadak-user
                port:
                  number: 80
          - path: /api/v1/buskings
            pathType: Prefix
            backend:
              service:
                name: gilbadak-busking
                port:
                  number: 80
